add model Botopia

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,19 @@ depthai-sdk==1.1.8
 future==1.0.0
 idna==3.10
 iso8601==2.1.0
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
+matplotlib==3.10.1
+numpy==2.2.5
 opencv-python==4.11.0.86
 pip==22.3
 pyserial==3.5
 pytube==15.0.0
 PyTurboJPEG==1.6.4
 PyYAML==6.0.2
+torch==2.7.0
+torchvision==0.22.0
 requests==2.32.3
 serial==0.0.97
 setuptools==65.5.0
-urllib3==2.3.0
+urllib3==2.4.0
+ultralytics==8.3.128
+ultralytics-thop==2.0.14
